[package]
name = "hookmap-core"
version = "0.1.0"
authors = ["keke1008 <keke2222337@gmail.com>"]
edition = "2018"
description = "Input emulation and global hooks for keyboard and mouse."
license = "MIT OR Apache-2.0"
repository = "https://github.com/keke1008/hookmap"
keywords = ["hotkey", "keyboard", "mouse"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
once_cell = "1.8.0"
bimap = "0.6.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
