[package]
name = "hookmap-core"
version = "0.1.12"
authors = ["keke1008 <keke2222337@gmail.com>"]
edition = "2018"
description = "Input emulation and global hooks for keyboard and mouse."
license = "MIT OR Apache-2.0"
repository = "https://github.com/keke1008/hookmap"
keywords = ["hotkey", "keyboard", "mouse"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/hookmap-core"

[dependencies]
once_cell = "1.8.0"
variant_count = "1.1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.36.1", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }

[features]
us-keyboard-layout = []
japanese-keyboard-layout = []

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
