[package]
name = "hookmap"
version = "0.4.5"
authors = ["keke1008 <keke2222337@gmail.com>"]
edition = "2018"
description = "Register hotkeys and simulate keyboard and mosue input."
license = "MIT OR Apache-2.0"
repository = "https://github.com/keke1008/hookmap"
keywords = ["hotkey", "keyboard", "mouse"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/hookmap"

[dependencies]
hookmap-core = { version = "0.1.11", path = "../hookmap-core" }
once_cell = "1.8.0"
smart-default = "0.6.0"

[features]
block-input-event = [ "hookmap-core/block-input-event" ]
us-keyboard-layout = [ "hookmap-core/us-keyboard-layout" ]
japanese-keyboard-layout = [ "hookmap-core/japanese-keyboard-layout" ]
default = [ "us-keyboard-layout" ]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
